@@ -603,15 +603,6 @@ name|lookupClass
 argument_list|()
 argument_list|)
 decl_stmt|;
-DECL|field|DEBUG
-specifier|private
-specifier|static
-specifier|final
-name|boolean
-name|DEBUG
-init|=
-literal|false
-decl_stmt|;
 DECL|method|getSolrXml
 specifier|protected
 name|String
@@ -746,17 +737,6 @@ expr_stmt|;
 name|testCreateShardRepFactor
 argument_list|()
 expr_stmt|;
-if|if
-condition|(
-name|DEBUG
-condition|)
-block|{
-name|super
-operator|.
-name|printLayout
-argument_list|()
-expr_stmt|;
-block|}
 block|}
 DECL|method|testCustomCollectionsAPI
 specifier|private
