@@ -367,15 +367,6 @@ name|NUM_SHARD_REPLICAS
 init|=
 literal|5
 decl_stmt|;
-DECL|field|VERBOSE
-specifier|private
-specifier|static
-specifier|final
-name|boolean
-name|VERBOSE
-init|=
-literal|false
-decl_stmt|;
 DECL|field|HOST
 specifier|private
 specifier|static
@@ -1116,21 +1107,6 @@ name|leaderPort
 argument_list|)
 expr_stmt|;
 comment|// kill the leader
-if|if
-condition|(
-name|VERBOSE
-condition|)
-name|System
-operator|.
-name|out
-operator|.
-name|println
-argument_list|(
-literal|"Killing "
-operator|+
-name|leaderPort
-argument_list|)
-expr_stmt|;
 name|containerMap
 operator|.
 name|get
@@ -1409,19 +1385,6 @@ operator|+
 literal|100
 argument_list|)
 expr_stmt|;
-if|if
-condition|(
-name|VERBOSE
-condition|)
-name|System
-operator|.
-name|out
-operator|.
-name|println
-argument_list|(
-literal|"kill everyone"
-argument_list|)
-expr_stmt|;
 comment|// kill everyone but the first leader that should have reconnected by now
 for|for
 control|(
@@ -1609,31 +1572,6 @@ literal|1
 argument_list|)
 argument_list|)
 expr_stmt|;
-if|if
-condition|(
-name|VERBOSE
-condition|)
-name|System
-operator|.
-name|out
-operator|.
-name|println
-argument_list|(
-literal|"The leader is:"
-operator|+
-name|Integer
-operator|.
-name|parseInt
-argument_list|(
-name|m
-operator|.
-name|group
-argument_list|(
-literal|1
-argument_list|)
-argument_list|)
-argument_list|)
-expr_stmt|;
 block|}
 else|else
 block|{
@@ -1657,20 +1595,6 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
-if|if
-condition|(
-name|VERBOSE
-condition|)
-block|{
-name|printLayout
-argument_list|(
-name|zkServer
-operator|.
-name|getZkHost
-argument_list|()
-argument_list|)
-expr_stmt|;
-block|}
 if|if
 condition|(
 name|zkClient
