@@ -726,15 +726,6 @@ name|TIMEOUT
 init|=
 literal|30000
 decl_stmt|;
-DECL|field|DEBUG
-specifier|private
-specifier|static
-specifier|final
-name|boolean
-name|DEBUG
-init|=
-literal|false
-decl_stmt|;
 DECL|field|overseers
 specifier|private
 name|List
@@ -2060,25 +2051,6 @@ expr_stmt|;
 block|}
 finally|finally
 block|{
-if|if
-condition|(
-name|DEBUG
-condition|)
-block|{
-if|if
-condition|(
-name|zkController
-operator|!=
-literal|null
-condition|)
-block|{
-name|zkClient
-operator|.
-name|printLayoutToStdOut
-argument_list|()
-expr_stmt|;
-block|}
-block|}
 name|close
 argument_list|(
 name|zkClient
@@ -2619,25 +2591,6 @@ expr_stmt|;
 block|}
 finally|finally
 block|{
-if|if
-condition|(
-name|DEBUG
-condition|)
-block|{
-if|if
-condition|(
-name|zkController
-operator|!=
-literal|null
-condition|)
-block|{
-name|zkClient
-operator|.
-name|printLayoutToStdOut
-argument_list|()
-expr_stmt|;
-block|}
-block|}
 name|close
 argument_list|(
 name|zkClient
@@ -3524,28 +3477,6 @@ end_class
 begin_finally
 finally|finally
 block|{
-if|if
-condition|(
-name|DEBUG
-condition|)
-block|{
-if|if
-condition|(
-name|controllers
-index|[
-literal|0
-index|]
-operator|!=
-literal|null
-condition|)
-block|{
-name|zkClient
-operator|.
-name|printLayoutToStdOut
-argument_list|()
-expr_stmt|;
-block|}
-block|}
 name|close
 argument_list|(
 name|zkClient
