@@ -418,15 +418,6 @@ name|lookupClass
 argument_list|()
 argument_list|)
 decl_stmt|;
-DECL|field|VERBOSE
-specifier|private
-specifier|static
-specifier|final
-name|boolean
-name|VERBOSE
-init|=
-literal|false
-decl_stmt|;
 DECL|field|zkServer
 specifier|protected
 name|ZkTestServer
@@ -2455,20 +2446,6 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
-if|if
-condition|(
-name|VERBOSE
-condition|)
-block|{
-name|printLayout
-argument_list|(
-name|zkServer
-operator|.
-name|getZkHost
-argument_list|()
-argument_list|)
-expr_stmt|;
-block|}
 name|zkClient
 operator|.
 name|close
