@@ -303,15 +303,6 @@ name|TIMEOUT
 init|=
 literal|10000
 decl_stmt|;
-DECL|field|DEBUG
-specifier|private
-specifier|static
-specifier|final
-name|boolean
-name|DEBUG
-init|=
-literal|false
-decl_stmt|;
 annotation|@
 name|BeforeClass
 DECL|method|beforeClass
@@ -1042,17 +1033,6 @@ argument_list|,
 literal|true
 argument_list|)
 expr_stmt|;
-if|if
-condition|(
-name|DEBUG
-condition|)
-block|{
-name|zkClient
-operator|.
-name|printLayoutToStdOut
-argument_list|()
-expr_stmt|;
-block|}
 name|zkClient
 operator|.
 name|close
