@@ -190,15 +190,6 @@ name|ZkSolrClientTest
 extends|extends
 name|AbstractSolrTestCase
 block|{
-DECL|field|DEBUG
-specifier|private
-specifier|static
-specifier|final
-name|boolean
-name|DEBUG
-init|=
-literal|false
-decl_stmt|;
 annotation|@
 name|BeforeClass
 DECL|method|beforeClass
@@ -764,17 +755,6 @@ literal|true
 argument_list|)
 expr_stmt|;
 block|}
-if|if
-condition|(
-name|DEBUG
-condition|)
-block|{
-name|zkClient
-operator|.
-name|printLayoutToStdOut
-argument_list|()
-expr_stmt|;
-block|}
 name|assertNotNull
 argument_list|(
 name|zkClient
@@ -882,17 +862,6 @@ literal|1000
 operator|*
 name|i
 argument_list|)
-expr_stmt|;
-block|}
-if|if
-condition|(
-name|DEBUG
-condition|)
-block|{
-name|zkClient
-operator|.
-name|printLayoutToStdOut
-argument_list|()
 expr_stmt|;
 block|}
 name|assertNotNull
@@ -1418,21 +1387,6 @@ name|WatchedEvent
 name|event
 parameter_list|)
 block|{
-if|if
-condition|(
-name|DEBUG
-condition|)
-block|{
-name|System
-operator|.
-name|out
-operator|.
-name|println
-argument_list|(
-literal|"children changed"
-argument_list|)
-expr_stmt|;
-block|}
 name|cnt
 operator|.
 name|incrementAndGet
@@ -1522,17 +1476,6 @@ argument_list|,
 literal|true
 argument_list|)
 expr_stmt|;
-if|if
-condition|(
-name|DEBUG
-condition|)
-block|{
-name|zkClient
-operator|.
-name|printLayoutToStdOut
-argument_list|()
-expr_stmt|;
-block|}
 comment|// pause for the watches to fire
 name|Thread
 operator|.
