@@ -310,15 +310,6 @@ name|DEFAULT_COLLECTION
 init|=
 literal|"collection1"
 decl_stmt|;
-DECL|field|DEBUG
-specifier|private
-specifier|static
-specifier|final
-name|boolean
-name|DEBUG
-init|=
-literal|false
-decl_stmt|;
 DECL|field|zkServer
 specifier|protected
 name|ZkTestServer
@@ -1867,15 +1858,6 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
-if|if
-condition|(
-name|DEBUG
-condition|)
-block|{
-name|printLayout
-argument_list|()
-expr_stmt|;
-block|}
 name|System
 operator|.
 name|clearProperty
