@@ -201,15 +201,6 @@ name|TIMEOUT
 init|=
 literal|45000
 decl_stmt|;
-DECL|field|DEBUG
-specifier|private
-specifier|static
-specifier|final
-name|boolean
-name|DEBUG
-init|=
-literal|false
-decl_stmt|;
 DECL|field|log
 specifier|private
 specifier|static
@@ -878,20 +869,6 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
-if|if
-condition|(
-name|DEBUG
-condition|)
-block|{
-name|printLayout
-argument_list|(
-name|zkServer
-operator|.
-name|getZkHost
-argument_list|()
-argument_list|)
-expr_stmt|;
-block|}
 name|super
 operator|.
 name|tearDown
